# xeno_canto_organizer

./: .gitignore  01_main.py  02_feature_extract.py  10_fex.py  110_prepare.py  11_quick_label.py  12_adjust_label.py  LICENSE  README.md  README_old.md  TODO.md  config.yaml  fex.py  fexutils.py  main.py  pyproject.toml  requirements.txt  requirements_full_freeze.txt  requirements_old.txt  setup.py  temp.py  test.py  tests.py  xco.py
dev_scripts/: build_utils.sh  dev_script_01.py  dev_script_02.py
meta/: lab_meta.py
misc/: manual_tests.py  sample_code.py  sandbox.py  test.py  xc_aec_clus_128by128.py
params/: import_params00.json  import_params01.json
sample_code/: example_long.py  example_short.py  usage.py  xc_downl_mini.json  xc_downl_sw_europe.json
sample_json/: sandbox.py  xc_downl_corvidae.json  xc_downl_n_europe.json  xc_downl_parus.json
spec/: sandbox.py  spec.py  spec_all_europe.py  spec_corvidae.py  spec_dev_data.py  spec_ne_europe.py  spec_parus_01.py  spec_sw_europe.py  spec_swe.py  spec_z_experimental.py
src/: 08_get_from_xc.py  09_mp3_to_wav.py  main.py  xco.py  xco_download  xco_download.py  xco_make_param  xco_make_param.py  xcp_download
src/devel/: devel_stuff.py  import_params00.json
src/devel_scripts/: devel_stuff.py  papa.py
src/xcproc/: 02_mp3_to_wav.py  03_add_noize.py
src/xeno_canto_organizer/: xco.py
src/xeno_canto_organizer/sample_json/: xc_downl_sw_eur_small.json  xc_downl_sw_europe.json
