[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "xeno_canto_organizer" 
version = "v0.9.11"

dependencies = [
    "pandas==2.2.3",
    "pillow==11.1.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "scikit-image==0.25.2",
    "scikit-maad==1.4.3",
    "scipy==1.15.2",
    "Unidecode==1.3.8",
]

authors = [
  { name="Serge Zaugg", email="author@example.com" },
]
description = "a Python toolkit to prepare Xeno-Canto bio-acoustic audio files for machine learning projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sergezaugg/xeno_canto_organizer"
Issues = "https://github.com/sergezaugg/xeno_canto_organizer/issues"

[tool.setuptools.package-data]
"xeno_canto_organizer.sample_json" = ["*.json"]
