[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
      
[tool.setuptools.packages.find]
where = ["src"]  
include = ["xeno_canto_organizer*"]  

[project]
name = "xeno_canto_organizer" 
version = "v0.9.16"
dependencies = [
    "pandas==2.2.3",
    "pillow==11.1.0",
    "requests==2.32.3",
    "scikit-maad==1.4.3",
    "scipy==1.15.2",
    "Unidecode==1.3.8",
]
authors = [
  { name="Serge Zaugg", email="author@example.com" },
]
description = "A Python toolkit to prepare Xeno-Canto bio-acoustic audio files for machine learning projects"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sergezaugg/xeno_canto_organizer"
Issues = "https://github.com/sergezaugg/xeno_canto_organizer/issues"

[tool.setuptools.package-data]
"xeno_canto_organizer.sample_json" = ["*.json"]
